...
  }
};


  return (
    <ScrollView contentContainerStyle={styles.container}>
      <Text   testID="accueilHomeTitle" style={styles.title} >
        Bienvenue {userName} {isAdmin ? "vous êtes admin" : "vous êtes un pirate normal"}
      </Text>

      <Text style={styles.subtext}>
        {boatListe.length > 0 ? `Nombre de bateaux : ${boatListe.length}` : "Aucun bateau"}
      </Text>
...
