
appId: host.exp.exponent
---

- tapOn:
    id: nomInput
- inputText: "hamzaMahjoubi"

- tapOn:
    id: passwordInput
- inputText: "Password123"

- pressKey: back
- tapOn:
    id: submitButton


- assertVisible:
    id: accueilHomeTitle

